Ajout des modifications manquantes

--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maguette Diop - Portfolio</title>
+    <title>Portfolio - Maguette Diop</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             line-height: 1.6;
-            color: #333;
-            background-color: #f4f4f9;
         }
         header {
             background: #333;
@@ -32,34 +30,24 @@
             text-decoration: none;
         }
         section {
-            max-width: 800px;
-            margin: 2rem auto;
-            padding: 1rem;
-            background: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        h1, h2 {
-            color: #333;
+            padding: 2rem;
+            margin: 2rem 0;
         }
         footer {
-            text-align: center;
-            padding: 1rem;
             background: #333;
             color: #fff;
-            margin-top: 2rem;
-        }
-        .section-title {
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
-            margin-bottom: 1rem;
+            text-align: center;
+            padding: 1rem 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Maguette Diop</h1>
-        <p>Étudiante en BTS SIO option SISR</p>
+        <h2>Étudiante en BTS SIO option SISR</h2>
         <p>Certifications : PIX, SecNumAcadémie</p>
         <nav>
             <ul>
@@ -72,12 +60,12 @@
     </header>
 
     <section id="about">
-        <h2 class="section-title">À propos</h2>
+        <h2>À propos</h2>
         <p>Passionnée par l'informatique, je suis actuellement en première année de BTS SIO option SISR (Solutions d'Infrastructure, Systèmes et Réseaux) au lycée Notre-Dame de la Providence. Mon objectif est de développer mes compétences dans les systèmes et réseaux pour devenir une professionnelle accomplie dans ce domaine.</p>
     </section>
 
     <section id="skills">
-        <h2 class="section-title">Compétences</h2>
+        <h2>Compétences</h2>
         <ul>
             <li>Administration système Windows et Linux</li>
             <li>Virtualisation (VMware, VirtualBox)</li>
@@ -87,28 +75,30 @@
     </section>
 
     <section id="projects">
-        <h2 class="section-title">Projets</h2>
+        <h2>Projets</h2>
         <ul>
-            <li><strong>Audit de l'existant :</strong> Analyse des infrastructures réseau et système pour identifier les points à améliorer.</li>
-            <li><strong>Préparation/Configuration du serveur Windows 2022 :</strong> Installation et paramétrage d'un serveur Windows 2022 pour un usage en entreprise.</li>
-            <li><strong>Intégration d'une machine dans le domaine :</strong> Ajout d'ordinateurs clients à un domaine Active Directory.</li>
-            <li><strong>Partage de ressources/Lecteurs réseau et stratégies :</strong> Mise en place de partages réseau et application de stratégies de groupe (GPO).</li>
-            <li><strong>Partage d'imprimantes et déploiement via GPO :</strong> Configuration de partages d'imprimantes et déploiement automatique grâce aux stratégies de groupe.</li>
-            <li><strong>Installation/Configuration d'un helpdesk (GLPI) :</strong> Mise en place et configuration de GLPI pour la gestion des tickets d'assistance.</li>
-            <li><strong>Inventorier un parc informatique avec l'agent GLPI :</strong> Utilisation de l'agent GLPI pour recenser les équipements informatiques.</li>
-            <li><strong>Installation/Configuration d'un cloud privé (Nextcloud) :</strong> Déploiement et configuration de Nextcloud pour un stockage cloud privé sécurisé.</li>
+            <li>Audit de l'existant : Analyse des infrastructures réseau et système pour identifier les points à améliorer.</li>
+            <li>Préparation/Configuration du serveur Windows 2022 : Installation et paramétrage d'un serveur Windows 2022 pour un usage en entreprise.</li>
+            <li>Intégration d'une machine dans le domaine : Ajout d'ordinateurs clients à un domaine Active Directory.</li>
+            <li>Partage de ressources/Lecteurs réseau et stratégies : Mise en place de partages réseau et application de stratégies de groupe (GPO).</li>
+            <li>Partage d'imprimantes et déploiement via GPO : Configuration de partages d'imprimantes et déploiement automatique grâce aux stratégies de groupe.</li>
+            <li>Installation/Configuration d'un helpdesk (GLPI) : Mise en place et configuration de GLPI pour la gestion des tickets d'assistance.</li>
+            <li>Inventorier un parc informatique avec l'agent GLPI : Utilisation de l'agent GLPI pour recenser les équipements informatiques.</li>
+            <li>Installation/Configuration d'un cloud privé (Nextcloud) : Déploiement et configuration de Nextcloud pour un stockage cloud privé sécurisé.</li>
         </ul>
     </section>
 
     <section id="contact">
-        <h2 class="section-title">Contact</h2>
-        <p><strong>Email :</strong> <a href="mailto:md8118968@gmail.com">md8118968@gmail.com</a></p>
-        <p><strong>Téléphone :</strong> 06 05 58 49 88</p>
-        <p><strong>GitHub :</strong> <a href="https://github.com/Maguettechou" target="_blank">Maguettechou</a></p>
+        <h2>Contact</h2>
+        <ul>
+            <li>Email : <a href="mailto:md8118968@gmail.com">md8118968@gmail.com</a></li>
+            <li>Téléphone : <a href="tel:+33605584988">06 05 58 49 88</a></li>
+            <li>GitHub : <a href="https://github.com/Maguettechou" target="_blank">Maguettechou</a></li>
+        </ul>
     </section>
 
     <footer>
-        <p>© 2025 Maguette Diop. Tous droits réservés.</p>
+        <p>&copy; 2025 Maguette Diop. Tous droits réservés.</p>
     </footer>
 </body>
 </html>
