--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
     <section id="cv">
         <h2>Mon CV</h2>
         <iframe src="cv-maguette-diop.pdf" width="100%" height="600px"></iframe>
+        <a href="CV MAGUETTE (2).pdf" target="_blank" class="button">Consulter mon CV</a>
+        <a href="CV MAGUETTE (2).pdf" download class="button">Télécharger mon CV</a>
+
     </section>
     
 </section>
