ajouter les modifications

--- a/index.html
+++ b/index.html
@@ -162,12 +162,10 @@
     <p>
         Curieuse et toujours en quête de nouvelles connaissances, je suis particulièrement attirée par l'administration des réseaux, la sécurité informatique et la gestion des systèmes d'exploitation. Mon objectif est de devenir une experte dans ces domaines et d'acquérir les compétences nécessaires pour optimiser les infrastructures IT dans le monde professionnel.
     </p>
-    <a href="#contact" class="button">Consulter mon CV</a>
-    <a href="cv-MAGUETTE(2).pdf" download class="button">Télécharger mon CV</a>
-    <a href="cv-MAGUETTE(2).pdf" target="_blank" class="button">Consulter mon CV</a>
+    
     <section id="cv">
         <h2>Mon CV</h2>
-        <iframe src="cv-maguette-diop.pdf" width="100%" height="600px"></iframe>
+        <iframe src="cv-MAGUETTE(2).pdf" width="100%" height="600px"></iframe>
         <a href="CV MAGUETTE (2).pdf" target="_blank" class="button">Consulter mon CV</a>
         <a href="CV MAGUETTE (2).pdf" download class="button">Télécharger mon CV</a>
 
