ajoute les modifications

--- a/index.html
+++ b/index.html
@@ -162,9 +162,7 @@
     <p>
         Curieuse et toujours en quête de nouvelles connaissances, je suis particulièrement attirée par l'administration des réseaux, la sécurité informatique et la gestion des systèmes d'exploitation. Mon objectif est de devenir une experte dans ces domaines et d'acquérir les compétences nécessaires pour optimiser les infrastructures IT dans le monde professionnel.
     </p>
-    
-    <section id="cv">
-        <iframe src="cv-MAGUETTE(2).pdf" width="100%" height="600px"></iframe>
+     <section >
         <a href="CV MAGUETTE (2).pdf" target="_blank" class="button">Consulter mon CV</a>
         <a href="CV MAGUETTE (2).pdf" download class="button">Télécharger mon CV</a>
 
