ajoute les modifications

--- a/index.html
+++ b/index.html
@@ -232,6 +232,19 @@
             <h3>Virtualisation</h3>
             <p>Création d'un environnement virtuel pour tester différentes configurations serveur.</p>
         </div>
+        <div class="card">
+            <h3>Projet d'infrastructure informatique</h3>
+            <ul>
+                <li><strong>Mission 1 :</strong> Audit de l'existant</li>
+                <li><strong>Mission 2 :</strong> Préparation/Configuration du serveur Windows 2022</li>
+                <li><strong>Mission 3 :</strong> Intégration d'une machine dans le domaine</li>
+                <li><strong>Mission 4 :</strong> Partage de ressources/lecteurs réseau et stratégies</li>
+                <li><strong>Mission 5 :</strong> Partage d'imprimantes et déploiement via GPO</li>
+                <li><strong>Mission 6 :</strong> Installation/Configuration d'un helpdesk (GLPI)</li>
+                <li><strong>Mission 7 :</strong> Inventorier un parc informatique avec l'agent GLPI</li>
+                <li><strong>Mission 8 :</strong> Installation/Configuration d'un cloud privé (Nextcloud)</li>
+            </ul>
+        </div>
     </div>
 </section>
 
