supprime et ajoute les modifications

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </div>
         <div class="card">
             <h3>Réseaux</h3>
-            <p>Configuration des réseaux locaux (LAN), gestion des VLAN et mise en place de la sécurité.</p>
+            <p>Configuration des réseaux locaux (LAN).</p>
         </div>
         <div class="card">
             <h3>Sécurité</h3>
@@ -188,7 +188,7 @@
         </div>
         <div class="card">
             <h3>Virtualisation</h3>
-            <p>Création et gestion d'environnements virtuels avec VMware et VirtualBox.</p>
+            <p>Création et gestion d'environnements virtuels avec VirtualBox.</p>
         </div>
         <div class="card">
             <h3>Bases de données</h3>
