supprime et ajoute les modifications

--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
         <div class="card">
             <h3>Réseaux</h3>
             <p>Configuration des réseaux locaux (LAN).</p>
-        </div>
-        <div class="card">
-            <h3>Sécurité</h3>
-            <p>Mise en place de solutions de sécurité des systèmes, gestion des pare-feu et des accès utilisateurs.</p>
+            <p>Création de machines virtuelles sur Proxmox (Windows Server 2022, Windows 10 Pro, Debian).</p>
+            <p>Configuration du rôle AD/DS.</p>
+            <p>Configuration des unités d'organisations (OU).</p>
+            <p>Gestion de stratégie de groupe (GPO).</p>
         </div>
         <div class="card">
             <h3>Virtualisation</h3>
@@ -220,10 +220,6 @@
 <section id="projects">
     <h2>Mes projets</h2>
     <div class="grid">
-        <div class="card">
-            <h3>Réseau d'entreprise</h3>
-            <p>Création d'un réseau sécurisé pour une PME, configuration des VLAN et routage.</p>
-        </div>
         <div class="card">
             <h3>Installation d'un serveur Web</h3>
             <p>Installation d'un serveur Apache et mise en place d'un site dynamique avec base de données MySQL.</p>
