ajout les amelioration

--- a/index.html
+++ b/index.html
@@ -220,8 +220,11 @@
         <div class="card">
             <h3>Installation d'un serveur Web</h3>
             <p>Installation d'un serveur Apache et mise en place d'un site dynamique avec base de données MySQL.</p>
-        </div>
-            <h3>Projet d'infrastructure informatique</h3>
+            <div>
+
+            </div>
+        </div class="card">
+        <h3>Projet d'infrastructure informatique</h3>
             <ul>
                 <li><strong>Mission 1 :</strong> Audit de l'existant</li>
                 <li><strong>Mission 2 :</strong> Préparation/Configuration du serveur Windows 2022</li>
